--- a/app/src/main/res/drawable/snapchat_icon.xml
+++ b/app/src/main/res/drawable/snapchat_icon.xml
@@ -1,4 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:viewportWidth="128"
     android:viewportHeight="128"
     android:width="128dp"
